--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
 port=8080
-DB_CONNECTIONSTRING="Server=DESKTOP-PE61FF1\SQLEXPRESS;Database=GoldenBook;User Id=node_message;Password=BfDigital;"
+DB_CONNECTIONSTRING="Server=DESKTOP-PE61FF1\\SQLEXPRESS;Database=GoldenBook;User Id=node_message;Password=BfDigital;TrustServerCertificate=True"
